# labs1_sql

./: .flake8  .gitignore  logging_config.py  pyproject.toml  readme.md
database/: .env  docker-sompose.yml
database/config/: pg_hba.conf  postgresql.conf
scripts/: clean_db.sh  clean_pycache.py  restart_db.sh  start_db.sh  stop_db.sh
tasks/task1_price_updates/: main.py  readme_task1.md
tasks/task1_price_updates/setup/: create_tables.py  insert_data.py  models.py
