[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labs1_SQL_project"
version = "1.0.0"
description = "Test project for SQL and Python"
requires-python = ">=3.9"
license = {text = "MIT License"}
readme = "readme.md"
authors = [
    {name = "Your Name", email = "your_email@example.com"}
]
keywords = ["PostgreSQL", "SQLAlchemy", "Python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "sqlalchemy>=2.0.0",           # SQLAlchemy ORM
    "psycopg2-binary>=2.9.6",      # PostgreSQL driver
    "pytest>=7.4.0",               # Testing framework
    "pytest-cov>=4.1.0",           # Test coverage
    "loguru>=0.7.0"                # Logging library
]

[project.optional-dependencies]
flake8 = [
    "black>=24.0.0",
    "flake8==7.1.1; python_version>='3.9'",
    "flake8-annotations==3.1.1; python_version>='3.9'",
    "flake8-annotations-coverage==0.0.6",
    "flake8-bugbear==23.12.2; python_version>='3.9'",
    "flake8-builtins==2.0.1; python_version>='3.9'",
    "flake8-cognitive-complexity==0.1.0",
    "flake8-commas==2.1.0",
    "flake8-comprehensions==3.13.0; python_version>='3.9'",
    "flake8-eradicate==1.5.0",
    "flake8-expression-complexity==0.0.11",
    "flake8-functions==0.0.7",
    "flake8-global-variables @ git+https://github.com/i02sopop/flake8-global-variables.git",
    "flake8-grug @ git+https://github.com/c0ntribut0r/flake8-grug.git",
    "flake8-json==21.7.0",
    "flake8-pie==0.16.0",
    "flake8-print==5.0.0",
    "flake8-scream==0.1.0",
    "flake8-simplify==0.20.0; python_version>='3.9'",
    "flake8-use-pathlib==0.3.0",
    "isort>=5.10.1",
    "mccabe==0.7.0",
    "pep8-naming==0.14.1",
    "pycodestyle==2.12.1; python_version>='3.9'",
    "pyflakes==3.2.0; python_version>='3.9'"
]

[project.scripts]
# Task 1: Price Updates
task1_create_tables = "tasks.task1_price_updates.create_tables:main"
task1_insert_data = "tasks.task1_price_updates.insert_data:main"
task1_run_main = "tasks.task1_price_updates.main:main"

[tool.setuptools.packages.find]
where = ["."]
